11 - A tabela foi centralizada e o botão voltar tambem

--- a/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
@@ -43,7 +43,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div id="btn-back">
         <a href="./home.html"><button id="back-button">VOLTAR </button></a>
     </div>
 </body>
