--- a/modulo1/css-bugfixes/exercicio-bugfixes/home.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/home.html
@@ -18,10 +18,12 @@
                 <p> Somos uma empresa focada </p>
                 <p> em tornar a compra de </p>
                 <p> roupas mais fácil </p>
-                <ol>
-                    <li> Ache os melhores descontos </li>
-                    <li> Busque pelos seus gostos</li>
-                </ol>
+                <div id="lista-ordenada">
+                    <ol>
+                        <li><p>Ache os melhores descontos</p></li>
+                        <li><p>Busque pelos seus gostos</p></li>
+                    </ol>
+                </div>
                 <h3> Realize seus sonhos conosco</h3>
             </div>
         </div>
