Projeto Portfólio Finalizadogit add .

--- a/modulo1/projeto-portfolio/competencias.html
+++ b/modulo1/projeto-portfolio/competencias.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/footer-header.css">
+    <link rel="stylesheet" href="./css/competencias.css">
+    <li></li>
     <title>Portfólio - Jônatas Felix</title>
 </head>
 
@@ -23,6 +25,44 @@
             <a href="./contato.html"><button>Contato</button></a>
         </div>
     </header>
+
+    <h1>Competências</h1>
+
+    <div id="competencias">
+        <div class="competencia">
+            <img src="./img/logo-html.png" alt="html">
+            <h4>HTML</h4>
+            <p>HTML é uma linguagem de marcação utilizada na construção de páginas na Web.</p>
+        </div>
+        <div class="competencia">
+            <img src="./img/logo-css.png" alt="css">
+            <h4>CSS</h4>
+            <p>Cascading Style Sheets é um mecanismo para adicionar estilo a um documento web.</p>
+        </div>
+        <div class="competencia">
+            <img src="./img/logo-js.png" alt="js">
+            <h4>JavaScript</h4>
+            <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica.</p>
+        </div>
+    </div>
+
+    <div id="competencias">
+        <div class="competencia">
+            <img src="./img/git.png" alt="git">
+            <h4>GIT</h4>
+            <p>GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
+        </div>
+        <div class="competencia">
+            <img src="./img/github.png" alt="github">
+            <h4>GitHub</h4>
+            <p>Git é um sistema de controle de versões distribuído, usado principalmente no desenvolvimento de software</p>
+        </div>
+        <div class="competencia">
+            <img src="./img/grupo.png" alt="grupo">
+            <h4>Trabalho em Grupo</h4>
+            <p>O grande objetivo do trabalho em grupo é o de promover a troca de conhecimento entre os integrantes, onde os mesmos exercitam suas capacidades de comunicação.</p>
+        </div>
+    </div>
 
     <footer>
         <div id="redes">
