--- a/modulo1/projeto-portfolio/projeto2.html
+++ b/modulo1/projeto-portfolio/projeto2.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/footer-header.css">
-    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="./css/projetos.css">
+    <link rel="stylesheet" href="./css/projeto1.css">
     <title>Portfólio - Jônatas Felix</title>
 </head>
 
@@ -25,26 +26,33 @@
         </div>
     </header>
 
-    <h1>Contato</h1>
+    <div id="Informacoes">
+        <h1>Projeto BlacJack</h1>
+        <p>Jogo BlackJack ou também conhecido como 21. Feito em JavaScript!</p>
+        <a href="https://jonatasfelix.github.io/freire-Jonatas-Cunha/modulo1/projeto-blackjack/"><button>Clique para jogar</button></a>
+    </div>
 
-    <form action="">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome">
-        
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Digite seu email">
+    <div>
+        <div id="projetos">
+            <a href="./img/blackjack.png" class="projeto">
+                <img src="./img/blackjack.png" alt="Site de compras" title="clique para expandir">
+                <p>Início</p>
+            </a>
 
-        <label for="mensagem">Mensagem:</label>
-        <textarea type="text" id="mensagem" name="mensagem" placeholder="Escreva uma mensagem!"></textarea>
+        </div>
+    </div>
 
-        <button>Enviar</button>
-    </form>
+
+    <div id="btn">
+        <a href="./projetos.html"><button>Voltar</button></a>
+    </div>
 
     <footer>
         <div id="redes">
             <p>Encontre-me em:</p>
             <div>
-                <a href="https://www.linkedin.com/in/jonatasfelix/" target="_blank"><img src="./img/icons8-linkedin-circundado-60.png" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/jonatasfelix/" target="_blank"><img
+                        src="./img/icons8-linkedin-circundado-60.png" alt="linkedin"></a>
                 <a href="mailto:jon.cunha@hotmail.com"><img src="./img/icons8-email-aberto-50.png" alt="email"></a>
                 <a href="https://github.com/jonatasfelix"><img src="./img/icons8-github-60.png" alt="github"></a>
             </div>
