--- a/modulo1/projeto-portfolio/projetos.html
+++ b/modulo1/projeto-portfolio/projetos.html
@@ -29,14 +29,14 @@
 
     <div>
         <div id="projetos">
-            <a href="" class="projeto">
-                <img src="./img/loja.png" alt="Site de compras">
+            <a href="./projeto1.html" class="projeto">
+                <img src="./img/loja.png" alt="Site de compras" title="clique para saber mais">
                 <p>Loja de Action Figures</p>
             </a>
 
-            <a href="" class="projeto">
-                <img src="./img/blackjack.png" alt="Site de compras">
-                <p>Loja de Action Figures</p>
+            <a href="./projeto2.html" class="projeto">
+                <img src="./img/blackjack.png" alt="blackJack" title="clique para saber mais">
+                <p>blackJack</p>
             </a>
 
         </div>
