--- a/modulo1/css-labetube/media3.html
+++ b/modulo1/css-labetube/media3.html
@@ -18,7 +18,7 @@
         <div class="video-container">
             <div class="video">
                 <h2>Media 3</h2>
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4" controls></video>
+                <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4" controls autoplay></video>
             </div>
         </div>
 
